--- a/about-us.htm
+++ b/about-us.htm
@@ -129,16 +129,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-free-subscribe-node.htm" title="顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月3日19.9M/S|免费SSR节点/Clash节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-26-node-share.htm" title="顶级代理服务器 - 10月26日20.5M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月26日20.5M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="顶级代理服务器 - 10月25日21.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月25日21.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-24-today-vless-node.htm" title="顶级代理服务器 - 10月24日21M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月24日21M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-vless-github.htm" title="顶级代理服务器 - 10月22日19.9M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点订阅机场推荐">顶级代理服务器 - 10月22日19.9M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-subscribe-node.htm" title="顶级代理服务器 - 11月1日19.9M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月1日19.9M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-2-vless-github.htm" title="顶级代理服务器 - 11月2日22.5M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月2日22.5M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-vless-node.htm" title="顶级代理服务器 - 11月8日18.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月8日18.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-19-latest-vless-node.htm" title="顶级代理服务器 - 10月19日18.7M/S|免费Shadowrocket节点/V2ray节点/Clash节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月19日18.7M/S|免费Shadowrocket节点/V2ray节点/Clash节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-vless-github.htm" title="顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-31-free-vless-node.htm" title="顶级代理服务器 - 10月31日22.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月31日22.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-today-vless-node.htm" title="顶级代理服务器 - 10月24日21M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月24日21M/S|免费SSR节点/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-3-free-node-subscribe.htm" title="顶级代理服务器 - 11月3日18.8M/S|免费Shadowrocket节点/Clash节点/Singbox节点/V2ray节点/SSR节点订阅机场推荐">顶级代理服务器 - 11月3日18.8M/S|免费Shadowrocket节点/Clash节点/Singbox节点/V2ray节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-today-vless-node.htm" title="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-27-node-share.htm" title="顶级代理服务器 - 10月27日22.1M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月27日22.1M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-free-node-subscribe.htm" title="顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-vless-node-share.htm" title="顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -150,7 +150,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
