--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -143,16 +143,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-vless-node.htm" title="顶级代理服务器 - 10月13日21.6M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月13日21.6M/S|免费V2ray节点/SSR节点/Clash节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-vless-windows.htm" title="顶级代理服务器 - 10月20日19.5M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月20日19.5M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-latest-vless-node.htm" title="顶级代理服务器 - 11月11日22.3M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月11日22.3M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-vless-node.htm" title="顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-subscribe-node.htm" title="顶级代理服务器 - 11月10日21.2M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月10日21.2M/S|免费Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-vless-node-github.htm" title="顶级代理服务器 - 11月5日18.9M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 11月5日18.9M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-27-node-share.htm" title="顶级代理服务器 - 10月27日22.1M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月27日22.1M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-9-node-share-links.htm" title="顶级代理服务器 - 11月9日22.9M/S|免费Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 11月9日22.9M/S|免费Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-22-vless-github.htm" title="顶级代理服务器 - 10月22日19.9M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点订阅机场推荐">顶级代理服务器 - 10月22日19.9M/S|免费Clash节点/Shadowrocket节点/SSR节点/Singbox节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share.htm" title="顶级代理服务器 - 10月12日18.9M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐">顶级代理服务器 - 10月12日18.9M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-vless-node.htm" title="顶级代理服务器 - 11月6日18.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月6日18.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-8-vless-node-share.htm" title="顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-subscribe-node.htm" title="顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-node-share.htm" title="顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-node-share.htm" title="顶级代理服务器 - 10月23日21.4M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月23日21.4M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-today-vless-node.htm" title="顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="顶级代理服务器 - 10月25日21.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月25日21.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-17-today-vless-node.htm" title="顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -164,7 +164,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
