--- a/free-nodes/2025-11-8-free-vless-node.htm
+++ b/free-nodes/2025-11-8-free-vless-node.htm
@@ -341,8 +341,14 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="clearfix"></div>
 <div class="col-md-12 mt-5">
         <p>上一个：<a href="/free-nodes/2025-11-7-node-share.htm">顶级代理服务器 - 11月7日21.5M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐</a></p>
+        <p>下一个：<a href="/free-nodes/2025-11-9-node-share-links.htm">顶级代理服务器 - 11月9日22.9M/S|免费Singbox节点/SSR节点/V2ray节点/Clash节点/Shadowrocket节点订阅机场推荐</a></p>
     </div>
 <h4>FAQ</h4>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>如何为 Vmess 节点生成安全的 UUID？</h5></div>
+    <div class="panel-body">
+        UUID 应使用标准的 128 位格式，可使用系统命令如 `uuidgen` 或在线 UUID 生成器生成随机、唯一的 ID；不要使用默认或弱随机值，定期更换以降低被滥用或泄露的风险。<hr />    </div>
+</div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Matsuri 节点延迟排序功能如何使用？</h5></div>
     <div class="panel-body">
@@ -359,9 +365,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Clash 结合策略组和延迟检测功能，可自动选择延迟低、稳定性高的节点处理网页流量。提高访问速度和稳定性，减少加载时间和浏览卡顿，优化网络体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Mihomo 节点分组如何提升访问效率？</h5></div>
+    <div class="panel-heading"><h5>SSR 混淆方式如何提高抗封锁能力？</h5></div>
     <div class="panel-body">
-        节点可按延迟、地区或用途分组，结合策略组实现自动分流。快速选择最优节点可提高网页、视频和游戏访问速度，同时优化节点管理和维护效率，提升整体网络体验。<hr />    </div>
+        SSR 混淆可将流量伪装成正常 HTTPS 或 HTTP 数据，降低被 DPI 检测风险。合理选择协议和混淆参数组合，可以提高节点稳定性和长期可用性，保证科学上网体验顺畅。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Shadowrocket 节点测速结合策略组的作用？</h5></div>
@@ -369,29 +375,24 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Shadowrocket 定期测速节点延迟和丢包率，并结合策略组自动选择最佳节点。保证网页、视频和游戏流量走低延迟节点，提高访问速度和连接稳定性。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Nekobox 是否支持跨客户端节点管理？</h5></div>
-    <div class="panel-body">
-        支持。Nekobox 可以独立管理 Shadowsocks、Clash 等客户端节点，互不干扰。结合策略组，可实现多客户端流量分流和网络优化，提高节点管理效率和使用便利性。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>如何为 Vmess 节点生成安全的 UUID？</h5></div>
-    <div class="panel-body">
-        UUID 应使用标准的 128 位格式，可使用系统命令如 `uuidgen` 或在线 UUID 生成器生成随机、唯一的 ID；不要使用默认或弱随机值，定期更换以降低被滥用或泄露的风险。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>VLESS + XTLS 模式能在移动网络下提高稳定性吗？</h5></div>
-    <div class="panel-body">
-        可以。XTLS 降低加密开销，减少握手次数，适合移动网络高延迟或不稳定环境。结合策略组和多出口节点，可提升连接稳定性和访问速度。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>WinXray 的 PAC 模式适合什么场景？</h5></div>
     <div class="panel-body">
         PAC 模式通过 JavaScript 文件动态判断哪些流量走代理，哪些直连。适合访问国内外混合网站环境，用户无需手动切换节点即可根据规则自动分流。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 混淆方式如何提高抗封锁能力？</h5></div>
+    <div class="panel-heading"><h5>Nekobox 是否支持跨客户端节点管理？</h5></div>
     <div class="panel-body">
-        SSR 混淆可将流量伪装成正常 HTTPS 或 HTTP 数据，降低被 DPI 检测风险。合理选择协议和混淆参数组合，可以提高节点稳定性和长期可用性，保证科学上网体验顺畅。    </div>
+        支持。Nekobox 可以独立管理 Shadowsocks、Clash 等客户端节点，互不干扰。结合策略组，可实现多客户端流量分流和网络优化，提高节点管理效率和使用便利性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Mihomo 节点分组如何提升访问效率？</h5></div>
+    <div class="panel-body">
+        节点可按延迟、地区或用途分组，结合策略组实现自动分流。快速选择最优节点可提高网页、视频和游戏访问速度，同时优化节点管理和维护效率，提升整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>VLESS + XTLS 模式能在移动网络下提高稳定性吗？</h5></div>
+    <div class="panel-body">
+        可以。XTLS 降低加密开销，减少握手次数，适合移动网络高延迟或不稳定环境。结合策略组和多出口节点，可提升连接稳定性和访问速度。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -420,16 +421,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-31-free-vless-node.htm" title="顶级代理服务器 - 10月31日22.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月31日22.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-2-vless-github.htm" title="顶级代理服务器 - 11月2日22.5M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月2日22.5M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-18-free-node-subscribe.htm" title="顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-20-vless-windows.htm" title="顶级代理服务器 - 10月20日19.5M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月20日19.5M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-vless-node.htm" title="顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月4日19.9M/S|免费V2ray节点/Shadowrocket节点/Clash节点/SSR节点/Singbox节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-vless-node-github.htm" title="顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-4-free-vless-node.htm" title="顶级代理服务器 - 11月4日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月4日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-vless-node-share.htm" title="顶级代理服务器 - 10月5日18.3M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月5日18.3M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="顶级代理服务器 - 10月25日21.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月25日21.5M/S|免费Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-21-node-share-links.htm" title="顶级代理服务器 - 10月21日21.3M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月21日21.3M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-subscribe-node.htm" title="顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月14日22.5M/S|免费Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-12-vless-node-github.htm" title="顶级代理服务器 - 11月12日18.6M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月12日18.6M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-subscribe-node.htm" title="顶级代理服务器 - 11月1日19.9M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月1日19.9M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-today-vless-node.htm" title="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-vless-node-share.htm" title="顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-today-vless-node.htm" title="顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月17日18.6M/S|免费Shadowrocket节点/SSR节点/Singbox节点/V2ray节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-vless-node.htm" title="顶级代理服务器 - 11月8日18.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月8日18.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -441,7 +442,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
