--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -114,6 +114,90 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-12">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-12-node-share.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 10月12日18.9M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-12-node-share.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 10月12日18.9M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、香港、美国、新加坡、欧洲、韩国、加拿大等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-11">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-11-vless-node-github.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐" src="/uploads/20241210/ee09fa5544bfbb6ea4e6e1645b502136.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-11-vless-node-github.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 10月11日22M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、日本、美国、香港、韩国、加拿大、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-10">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-10-vless-github.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐" src="/uploads/20241210/d47f3489830be75ea2f9e8cdcf5ad1ff.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-10-vless-github.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、加拿大、日本、韩国、新加坡、香港、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-09">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-9-today-vless-node.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐" src="/uploads/20241210/55d0a93cb4438b22e3a4207ee6927c45.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-9-today-vless-node.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、欧洲、新加坡、香港、美国、韩国、日本等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-8-vless-node-share.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-8-vless-node-share.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、香港、日本、新加坡、加拿大、美国、欧洲等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-10-7-today-vless-node.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐" src="/uploads/20241210/c8aeca7ec04508d834868d756fa8dda4.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-10-7-today-vless-node.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、新加坡、欧洲、美国、韩国、香港、日本等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-10-06">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-10-6-free-vless-node.htm" class="xcblog-blog-url">
@@ -180,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-free-subscribe-node.htm" title="顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月16日20.3M/S|免费SSR节点/V2ray节点/Clash节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-4-free-vless-node.htm" title="顶级代理服务器 - 11月4日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月4日19.7M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-7-node-share.htm" title="顶级代理服务器 - 11月7日21.5M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月7日21.5M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-31-free-vless-node.htm" title="顶级代理服务器 - 10月31日22.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月31日22.5M/S|免费V2ray节点/Shadowrocket节点/Clash节点/Singbox节点/SSR节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-12-vless-node-github.htm" title="顶级代理服务器 - 11月12日18.6M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 11月12日18.6M/S|免费V2ray节点/Clash节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-15-node-share.htm" title="顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月15日22.4M/S|免费Shadowrocket节点/Singbox节点/SSR节点/V2ray节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-23-node-share.htm" title="顶级代理服务器 - 10月23日21.4M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月23日21.4M/S|免费SSR节点/Clash节点/V2ray节点/Singbox节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-6-vless-node.htm" title="顶级代理服务器 - 11月6日18.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅机场推荐">顶级代理服务器 - 11月6日18.1M/S|免费SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-free-vless-node.htm" title="顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月6日18M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-vless-github.htm" title="顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐">顶级代理服务器 - 10月10日19.6M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-vless-node-share.htm" title="顶级代理服务器 - 10月5日18.3M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点订阅机场推荐">顶级代理服务器 - 10月5日18.3M/S|免费Shadowrocket节点/Singbox节点/Clash节点/V2ray节点/SSR节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-26-node-share.htm" title="顶级代理服务器 - 10月26日20.5M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月26日20.5M/S|免费Singbox节点/V2ray节点/SSR节点/Shadowrocket节点/Clash节点订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-today-vless-node.htm" title="顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月7日18.9M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-8-free-vless-node.htm" title="顶级代理服务器 - 11月8日18.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月8日18.2M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-8-vless-node-share.htm" title="顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月8日22.4M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-free-node-subscribe.htm" title="顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐">顶级代理服务器 - 10月18日21.4M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-today-vless-node.htm" title="顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐">顶级代理服务器 - 10月9日20.3M/S|免费SSR节点/Shadowrocket节点/V2ray节点/Singbox节点/Clash节点订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-latest-vless-node.htm" title="顶级代理服务器 - 11月11日22.3M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点订阅机场推荐">顶级代理服务器 - 11月11日22.3M/S|免费V2ray节点/Singbox节点/Shadowrocket节点/SSR节点/Clash节点订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -201,7 +285,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
